Ссылка на картинку переделана

--- a/Практическая работа 1/Практическая работа 1.csproj
+++ b/Практическая работа 1/Практическая работа 1.csproj
@@ -94,5 +94,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Ресурсы\Снимок.PNG" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
